# python-stand013

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
src/stand013/: __init__.py  _enums.py  cli.py  validation.py
src/stand013/schemas/: STAND013 DeliveryNote_v1p1.xsd  STAND013 Faktura v1.0 (XML).xsd  STAND013 Fakturakvittering 1.0 (XML).xsd  STAND013-Components_v1p1.xsd  STAND013-DeliveryNote_Interchange_v1p1.xsd  STAND013-DeliveryNote_v1p1.xsd  STAND013-OrderResponse-Receipt_v1p1.xsd  STAND013-OrderResponse_Interchange_v1p1.xsd  STAND013-OrderResponse_Receipt-Interchange_v1p1.xsd  STAND013-OrderResponse_v1p1.xsd  STAND013-Order_Interchange_v1p1.xsd  STAND013-Order_v1p1.xsd
tests/: test_cli.py  test_document_type.py  test_module.py  test_validation.py
tests/examples/: desadv.xml  orders.xml  ordrsp.xml  unknown.xml
